# ascii-3d

./: Cargo.toml  PATCH_NOTES.md  README.md
assets/: cartesian_axes.json  projection.default.json  quad4.scene.json
assets/models/: README.md
src/: app.rs  axis_metadata.rs  camera3d.rs  canvas.rs  geojson.rs  geometry2d.rs  lib.rs  main.rs  mesh.rs  mesh_renderer.rs  obj.rs  projection.rs  projection_config.rs  scene_config.rs  world_space.rs  xyz_control.rs
tools/: apply_a3d_camera_view_config.py  apply_a3d_control_mode_menu.py  apply_a3d_control_modes_light.py  apply_a3d_mesh_asset_rendering.py  apply_a3d_mesh_camera_cell_budget.py  apply_a3d_mesh_edge_stride.py  apply_a3d_object_rotation_behavior.py  apply_a3d_world_mode_and_active_reset.py  apply_active_scene_key_event_trace.py  apply_add_exit_confirm_popup.py  apply_add_xyzcontrol_basic_setup.py  apply_alt_menu_left_right_file_f.py  apply_cartesian_metadata_validation_fix.py  apply_cartesian_obj_test_path_fix.py  apply_cli_a3d_path_load_fix.py  apply_debug_console_close_and_disable_old_popup.py  apply_debug_console_floating_popup.py  apply_debug_console_scrollbars_world_print.py  apply_debug_direct_z_rotate_hotkey.py  apply_fix_a3d_control_modes_light.py  apply_fix_appstate_new_debug_console.py  apply_fix_control_menu_tui.py  apply_fix_dangling_old_popup_else.py  apply_fix_debug_console_close_popup_cleanup.py  apply_fix_debug_console_main_render_call.py  apply_fix_main_debug_console_panel.py  apply_fix_world_debug_borrow.py  apply_fix_world_debug_no_lights_field.py  apply_fix_world_light_controls_reload.py  (+39 more)
(+203 files in other folders)
