[package]
name = "ascii-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "6.0.0"
ratatui = "0.30"
crossterm = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minifb = "0.28"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
